--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
     "start": "nodemon -w ./ ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0",
-    "nodemon": "^1.14.10",
-    "serve-favicon": "~2.4.5",
-    "bcrypt-nodejs": "0.0.3",
-    "cors": "^2.8.4",
+    "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "fs": "0.0.1-security",
+    "jade": "~1.11.0",
     "jsonwebtoken": "^8.2.2",
+    "morgan": "~1.9.0",
+    "mysql": "^2.15.0",
     "nodemailer": "^4.6.5",
+    "nodemon": "^1.14.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "serve-favicon": "~2.4.5",
     "trycatch": "^1.5.21",
-    "uniqid": "^5.0.3"
+    "uniqid": "^5.0.3",
+    "uuid": "^3.3.2"
   }
 }
