--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon -w ./ ./bin/www"
+    "start": "nodemon -w ./ ./bin/www",
+    "forever": "forever start ./bin/www"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
