--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^1.14.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "serve-favicon": "~2.4.5",
     "trycatch": "^1.5.21",
     "uniqid": "^5.0.3",
